--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:1077/postgres
 spring.datasource.username=s336428
 spring.datasource.password=mzP4KF8QYu3CKXaY
-logging.level.root=info
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+
 
