--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:1077/postgres
+spring.datasource.url=jdbc:postgresql://localhost:1077/studs
+#spring.jpa.properties.hibernate.default_schema=studs
 spring.datasource.username=s336428
 spring.datasource.password=mzP4KF8QYu3CKXaY
 
