--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.datasource.url=jdbc:postgresql://localhost:1077/studs
 spring.datasource.username=s336428
 spring.datasource.password=mzP4KF8QYu3CKXaY
 
+#server.port=54387
+
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
